# CRaytracer

./: CMakeLists.txt  README.md
inc/: camera.h  caster.h  common.h  dispatcher.h  display.h  display_acc.h  image.h  material.h  noise.h  profiler.h
src/: camera.c  caster.c  common.c  dispatcher.c  display.c  display_acc.c  image.c  main.c  material.c  noise.c  profiler.c
